# proc_watcher

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: ci-cd.yml  ci.yml
cmake/: CMakeConfig.cmake  CMakeInstall.cmake  CMakeInstallConfig.cmake  CMakeLTO.cmake  CMakeLibs.cmake  CMakeLink.cmake  CMakeOptions.cmake  CMakePreConf.cmake  CMakeTargets.cmake  install-config.cmake  install-rules.cmake  proc_watcherConfig.cmake.in  proxConfig.cmake.in
demo/: CMakeLists.txt  main.cpp
example/: CMakeLists.txt  example.cpp
inc/proc_watcher/: proc_watcher.hpp  process.hpp
include/proc_watcher/: cpu_time.hpp  proc_watcher.hpp  process.hpp
include/prox/: cpu_time.hpp  process.hpp  prox.hpp  stat.hpp
src/: main.cpp
test/: CMakeLists.txt
test/include/: mock_cpu_time.hpp  mock_proc_dir.hpp  mock_process.hpp  utils.hpp
test/source/: cpu_time_exists.cpp  cpu_time_features.cpp  process_exists.cpp  process_features.cpp  prox_exists.cpp  prox_features.cpp  prox_test.cpp  stat_exists.cpp  stat_features.cpp  test_utils.cpp  utils.hpp
